// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker snapshot matches the snapshot have a value 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Label
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-pointer hover:border-blue6 border-neutral8"
      >
        <p
          class="text-base text-neutral9"
        >
          01/09/2024
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#454545"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker snapshot matches the snapshot when disabled 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Label
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-not-allowed border-neutral6 bg-neutral4 text-neutral7"
      >
        <p
          class="text-base text-neutral7"
        >
          DD/MM/YYYY
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#8C8C8C"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker snapshot matches the snapshot when required 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Label
      </p>
      <p
        class="text-sm font-bold text-[red]"
      >
        *
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-pointer hover:border-blue6 border-neutral5"
      >
        <p
          class="text-base text-neutral5"
        >
          DD/MM/YYYY
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#454545"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker snapshot matches the snapshot with custom label 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Unit Testing
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-pointer hover:border-blue6 border-neutral5"
      >
        <p
          class="text-base text-neutral5"
        >
          DD/MM/YYYY
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#454545"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker snapshot matches the snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Label
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-pointer hover:border-blue6 border-neutral5"
      >
        <p
          class="text-base text-neutral5"
        >
          DD/MM/YYYY
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#454545"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker snapshot matches the snapshot with error state 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Label
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-pointer hover:border-error5 border-error5"
      >
        <p
          class="text-base text-neutral5"
        >
          DD/MM/YYYY
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99984 5.83317C10.4582 5.83317 10.8332 6.20817 10.8332 6.6665V9.99984C10.8332 10.4582 10.4582 10.8332 9.99984 10.8332C9.5415 10.8332 9.1665 10.4582 9.1665 9.99984V6.6665C9.1665 6.20817 9.5415 5.83317 9.99984 5.83317ZM9.9915 1.6665C5.3915 1.6665 1.6665 5.39984 1.6665 9.99984C1.6665 14.5998 5.3915 18.3332 9.9915 18.3332C14.5998 18.3332 18.3332 14.5998 18.3332 9.99984C18.3332 5.39984 14.5998 1.6665 9.9915 1.6665ZM9.99984 16.6665C6.3165 16.6665 3.33317 13.6832 3.33317 9.99984C3.33317 6.3165 6.3165 3.33317 9.99984 3.33317C13.6832 3.33317 16.6665 6.3165 16.6665 9.99984C16.6665 13.6832 13.6832 16.6665 9.99984 16.6665ZM10.8332 14.1665H9.1665V12.4998H10.8332V14.1665Z"
              fill="#F0454B"
            />
          </svg>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#454545"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePicker snapshot matches the snapshot with helper text 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[200px] relative"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11 mb-1"
      >
        Label
      </p>
    </div>
    <div>
      <div
        class="flex h-[52px] items-center justify-between rounded-md border px-3 py-[15px] cursor-pointer hover:border-blue6 border-neutral5"
      >
        <p
          class="text-base text-neutral5"
        >
          DD/MM/YYYY
        </p>
        <div
          class="flex items-center gap-x-2"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 3H19V2C19 1.45 18.55 1 18 1C17.45 1 17 1.45 17 2V3H7V2C7 1.45 6.55 1 6 1C5.45 1 5 1.45 5 2V3H4C2.9 3 2 3.9 2 5V21C2 22.1 2.9 23 4 23H20C21.1 23 22 22.1 22 21V5C22 3.9 21.1 3 20 3ZM19 21H5C4.45 21 4 20.55 4 20V8H20V20C20 20.55 19.55 21 19 21Z"
              fill="#454545"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="text-xs mt-1 font-normal text-[#6E6F72]"
    >
      Unit Testing
    </p>
  </div>
</DocumentFragment>
`;
